--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,9 +8,10 @@
 
 body
 {
-    background: linear-gradient(-45deg, #faebd7 , #455f65 , #faf0e6 , #2c3552 );
+    background: radial-gradient(#f6f6f6 , #ececec , #DDDDDD, #FAF3F3, #e1e1e1 , #d0d0d0, #F8F5F1 );
 	background-size: 400% 400%;
-	animation: gradient 15s ease-in-out;
+	animation: gradient 15s infinite;
+    z-index: -1;
 }
 
 @keyframes gradient {
@@ -33,7 +34,7 @@ html, body
 .loader-wrapper
 {
     position: fixed;
-    z-index: 1679;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
@@ -285,13 +286,62 @@ html, body
     }
 }	
 
-.card-new
+.cardnew
 {
-    margin-top: -10px;
-    left: 45%;
+    left: 43%;
     border-bottom: 2px solid;
-    font-size: 3rem;
+    font-size: 60px;
+    transform: translate(-50%,-50%);
     position: relative;
+    overflow: hidden;
+
+    background: radial-gradient(#FC5404,#ff0000, #ff4d00, #CE1212, #272121, #F54748);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% 100%;
+    background-position: 100%;
+    transition: background-position 275ms ease;
+    animation: gradient 10s ease-in-out infinite ;
+}
+
+.carousel-inner
+{
+    padding-bottom: 150px;
+}
+
+.carousel-indicators
+{
+    margin-top: 600px;
+    z-index: 150;
+}
+
+.carousel-indicators li
+{
+    height: 3px !important;
+    border-radius: 0px !important;
+    width: 25%;
+    color: black;
+}
+
+.card
+{
+    border-radius: 4px;
+    background: #fff;
+    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    padding: 14px 80px 18px 36px;
+    cursor: pointer;
+    z-index: 150;
+}
+
+.card:hover
+{
+    transform: scale(1.15);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 8px 12px rgba(0,0,0,.06);
+    z-index: 200;
+    background: #ff9564;
+    border-radius: 4px;
 }
 
 #multi-item-example
@@ -304,5 +354,25 @@ html, body
 .carousel-item
 {
     margin-top: 30px;
+}
+
+.btn
+{
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 13px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.btn:hover
+{
+    background-color: #ff0000;
+    border: solid 2px;
+    border-color: #ff0000;
+    color: #ffffff;
 }
 
