landing-page-dbaccess

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,6 +31,12 @@ html, body
     height: 100vh;
 }
 
+#cardimg
+{
+    height: 200px;
+    object-fit: fill;
+}
+
 .loader-wrapper
 {
     position: fixed;
