css-changes::will do shop view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,16 +91,45 @@ html, body
     transition: ease-in-out 0.5s;
 }
 
-#nbar-buttons a
+#nbar-buttons-account, #nbar-buttons-login, #nbar-buttons-register
 {
-    background-color: black; 
-    border: none;
-    color: white;
-    padding: 8px 32px;
-    text-align: center;
     text-decoration: none;
+    margin-top: 4px;
+    font-size: 20px;
+    position: relative;
     display: inline-block;
-    font-size: 15px;   
+    color: #272121;
+    overflow: hidden;
+    justify-content: flex-end;
+
+    background: linear-gradient(to right, #217FE1, #217FE1 50%, #272121 50%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% 100%;
+    background-position: 100%;
+    transition: background-position 275ms ease;
+    animation: gradient 7s ease-in ;
+}
+
+#nbar-buttons-account:hover, #nbar-buttons-login:hover, #nbar-buttons-register:hover
+{
+    background-position: 0 100%;
+}
+
+#nbar-buttons-account::after, #nbar-buttons-login::after, #nbar-buttons-register::after
+{
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #000;
+    transition: width .3s;
+}
+
+#nbar-buttons-account:hover::after, #nbar-buttons-login:hover::after, #nbar-buttons-register:hover::after
+{
+    width: 100%;
 }
 
 .navbar-brand img:hover
@@ -114,12 +143,6 @@ html, body
     justify-content: space-between;
     align-items: center;
     padding: 1rem 1.5rem;
-}
-
-#nbar-buttons a
-{
-    margin-top: -5px;
-    justify-content: flex-end;
 }
 
 .nav-menu
@@ -160,7 +183,7 @@ html, body
     background-position: 0 100%;
 }
 
-.nav-link::after 
+.nav-link::after
 {
     content: '';
     display: block;
