--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,12 +31,6 @@ html, body
     height: 100vh;
 }
 
-#cardimg
-{
-    height: 200px;
-    object-fit: fill;
-}
-
 .loader-wrapper
 {
     position: fixed;
@@ -143,6 +137,7 @@ html, body
     justify-content: space-between;
     align-items: center;
     padding: 1rem 1.5rem;
+    background-color: rgba(255,255,255,.9);
 }
 
 .nav-menu
@@ -292,12 +287,18 @@ html, body
     }
 }	
 
+.title-wrapper
+{
+    padding-top: 100px;
+    margin-bottom: -120px;
+}
+
 .cardnew
 {
     left: 43%;
     border-bottom: 2px solid;
-    font-size: 60px;
     transform: translate(-50%,-50%);
+    font-size: 60px;
     position: relative;
     overflow: hidden;
 
@@ -346,20 +347,33 @@ html, body
     transform: scale(1.15);
     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 8px 12px rgba(0,0,0,.06);
     z-index: 200;
-    background: #449DED;
+    background: #FFFFFF;
     border-radius: 4px;
 }
 
 #multi-item-example
 {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    top: 10%;
+}
+
+.card
+{
+    padding-top: 10px;
+    margin-top: 20px;
+    justify-self: center;
+}
+
+#cardimg
+{
+    height: 200px;
+    width: 200px;
 }
 
 .carousel-item
 {
-    margin-top: 30px;
+    padding-top: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .btn
@@ -370,15 +384,11 @@ html, body
     padding: 13px 30px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
 }
 
 .btn:hover
 {
-    background-color: #ff0000;
-    border: solid 2px;
-    border-color: #ff0000;
-    color: #ffffff;
+    background-color: #EEEAEA;
+    color: #144B85;
 }
-
