--- a/public/css/layout-css.css
+++ b/public/css/layout-css.css
@@ -99,6 +99,16 @@ body
     width: 100%;
 }
 
+.dropdown-item:hover
+{
+    background-position: 0 100%;
+    color: #1F7DE0;
+    border-bottom: 2px solid;
+    border-color: #010302;
+    font-weight: 800;
+    transition: .5s;
+}
+
 #main-container
 {
     margin-top: 100px;
