--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap');
 *
 {
     top: 0;
     right: 0;
     box-sizing: border-box;
-    font-family: 'Bebas', sans-serif;
+    font-family: 'Arvo', sans-serif;
+    font-weight: 400;
 }
 
 body
