--- a/public/css/layout-css.css
+++ b/public/css/layout-css.css
@@ -20,6 +20,16 @@ body
     z-index: -1;
 }
 
+.display-1
+{
+    font-size: 50px;
+}
+
+.display-2
+{
+    font-size: 30px;
+}
+
 @keyframes gradient {
 	0% {
 		background-position: 100% 50%;
@@ -56,7 +66,7 @@ body
 
 .nav-item
 {
-    margin-left: 5rem;
+    margin-left: 3rem;
 }
 
 .nav-link
