--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 *
 {
     top: 0;
     right: 0;
     box-sizing: border-box;
-    font-family: 'Bebas', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body
@@ -109,7 +111,7 @@ html, body
 
 .nav-item
 {
-    margin-left: 5rem;
+    margin-left: 6rem;
 }
 
 .nav-link
@@ -250,6 +252,7 @@ html, body
 .cardnew
 {
     border-bottom: 2px solid;
+    font-weight: bold;
     transform: translate(-50%,-50%);
     font-size: 60px;
     position: relative;
