--- a/public/css/layout-css.css
+++ b/public/css/layout-css.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 *
 {
     top: 0;
     right: 0;
     box-sizing: border-box;
-    font-family: 'Arvo', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
 }
 
@@ -20,6 +20,18 @@ body
 	background-size: 400% 400%;
 	animation: gradient 15s infinite;
     z-index: -1;
+}
+
+.display-1
+{
+    font-size: 50px;
+    text-transform:uppercase;
+    font-weight: bold;
+}
+
+.display-2
+{
+    font-size: 30px;
 }
 
 @keyframes gradient {
@@ -58,7 +70,7 @@ body
 
 .nav-item
 {
-    margin-left:    2rem;
+    margin-left:    2.5rem;
 }
 
 .nav-link
@@ -84,6 +96,7 @@ body
 .nav-link:hover
 {
     background-position: 0 100%;
+    font-weight: bold;
 }
 
 .nav-link::after
