--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 *
 {
     top: 0;
     right: 0;
     box-sizing: border-box;
-    font-family: 'Arvo', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
 
@@ -111,7 +112,7 @@ html, body
 
 .nav-item
 {
-    margin-left: 7rem;
+    margin-left: 5rem;
 }
 
 .nav-link
@@ -137,6 +138,7 @@ html, body
 .nav-link:hover
 {
     background-position: 0 100%;
+    font-weight: bold;
 }
 
 .nav-link::after
