mini update navbar

--- a/public/css/layout-css.css
+++ b/public/css/layout-css.css
@@ -197,8 +197,7 @@ body
     border-radius: 0.25rem;
 }
 
-#otherOrders {
-
-    margin-left: -.7rem;
-
+#submenuitem
+{
+    margin-left: -.5rem;
 }
