--- a/public/css/layout-css.css
+++ b/public/css/layout-css.css
@@ -54,12 +54,10 @@ body
 
 .navbar
 {
-    position: fixed;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
-    padding: 1rem 1.5rem;
     background-color: rgba(255,255,255,.9);
 }
 
